# aie-2025

./: .gitattributes  README.md  best_config.json  report.md  runs.csv
homeworks/: pyproject.toml
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: README.md  pyproject.toml
homeworks/HW03/eda-cli/reports/: report.md
homeworks/HW03/eda-cli/reports2/: report.md
homeworks/HW03/eda-cli/src/eda_cli/: cli.py  core.py
homeworks/HW04/eda-cli/: README.md  pyproject.toml
homeworks/HW04/eda-cli/data/: example.parquet
homeworks/HW04/eda-cli/tests/: test_core.py
homeworks/HW05/: HW05.ipynb
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW06/artifacts/: best_model_meta.json  metrics_test.json  search_summaries.json
homeworks/HW07/: HW07.ipynb  report.md
homeworks/HW07/artifacts/: best_configs.json  hw07_ds2_numeric_columns_distribution_report.csv  hw07_ds3_numeric_columns_distribution_report.csv  metrics_summary.json
homeworks/HW07/config/: base.toml
homeworks/HW08-09/: HW08-09.ipynb
homeworks/HW08-09/artifacts/: best_model.pt
homeworks/HW10-11/: report.md
homeworks/HW10-11/artifacts/: best_classifier_config.json  runs.csv
homeworks/HW12/: HW12.ipynb  report.md
homeworks/HW12/artifacts/: best_gru.pt  best_gru_config.json  runs.csv
homeworks/HW13/: HW13.ipynb  report.md
homeworks/HW13/artifacts/: sample_predictions.csv
homeworks/HW14/: HW14.ipynb  report.md
homeworks/HW14/artifacts/: rag_examples.csv  retrieval_before_after_update.csv  retrieval_eval.csv  retrieval_metrics_summary.json
(+12 files in other folders)
