[project]
name = "eda-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Doster", email = "63081538+Doster-d@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "typer>=0.20.0",
]

[project.scripts]
eda-cli = "eda_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
